[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flask_blackbox"
version = "1.0.0"
description = "Basic flask app with blackbox test"
requires-python = ">=3.7"
dependencies = [
    "Flask>=2.2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "requests"
]
